hphp/test/zend/good/ext/zlib/tests/gzfile_variation4.php.skipif
<?php
if (!extension_loaded(zlib)) die ('skip zlib extension not available in this build');
?>